fix bug with spinner shown over an ad on ios

--- a/src/css/videojs-hola-skin.less
+++ b/src/css/videojs-hola-skin.less
@@ -679,3 +679,8 @@
         }
     }
 }
+// XXX andrey: fix bug with spinner shown over an ad on ios
+// better to fix it in videojs-contrib-ads, if we will fork it
+.vjs-ad-playing .vjs-loading-spinner {
+    display: none !important;
+}
